# pruebas_compi-q2

./: spl_grammar_ll1.txt
Prueba3_P2_2020/: expr_lexer.cpp  expr_lexer.h  expr_parser.cpp  expr_parser.h  expr_slr_table.cpp  expr_slr_table.h  grammar.txt  grammar_slr.txt
Prueba3_P2_2020/tools/: ecc.tar.xz
fa/: arithmetic.jff  ident.jff  punctuation.jff  start.jff
prueba1/: const_lexer.h
prueba1/fa/: const_lexer.fa2l  constants.jff  start.jff
prueba1/tests/: CMakeLists.txt
prueba2/: Makefile  grammar.txt  parser.cpp  parser.h
prueba_examen1/: spl_grammar_ll1.txt  spl_lexer.h  spl_ll1_table.cpp  spl_parser.cpp  spl_parser.h  spl_symbols.h
prueba_examen1/fa/: decimal.jff  delimiters.jff  spl_lexer.fa2l
tests/: CMakeLists.txt  test_parser.cpp
